--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-toastify": "^8.0.3",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.0.1",
+    "yarn": "^1.22.11",
     "yup": "^0.32.9"
   },
   "scripts": {
